# BPS-refresh

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  vcpkg.json
executable/: CMakeLists.txt
executable/ravtest/: CMakeLists.txt
executable/ravtest/src/: main.cpp
executable/toBase64/: CMakeLists.txt
executable/toBase64/src/: main.cpp
libs/: CMakeLists.txt
libs/common/: CMakeLists.txt
libs/common/include/common/: Image.hpp  Logger.hpp  MemoryBuffer.hpp  Rect2D.hpp  dummy.hpp  enumFormatter.hpp  types.hpp
libs/common/include/tools/: base64.hpp  contains.hpp  countBits.hpp  to_vector.hpp  writeFile.hpp
libs/common/src/: Image.cpp  Logger.cpp  MemoryBuffer.cpp  base64.cpp  dummy.cpp
libs/common/ut/: CMakeLists.txt
libs/common/ut/src/: base64_tests.cpp  contains_tests.cpp  logger_tests.cpp  to_vector_tests.cpp
libs/engine/: CMakeLists.txt
libs/engine/include/engine/: dummy.hpp
libs/engine/src/: dummy.cpp
libs/importer/: CMakeLists.txt
libs/importer/include/importer/: decode.hpp  dummy.hpp  tmp.hpp
libs/importer/src/: bmp.cpp  dummy.cpp  sdl.cpp  tga.cpp
libs/importer/ut/: CMakeLists.txt
libs/importer/ut/src/: imageDecode_tests.cpp
libs/renderingEngine/: CMakeLists.txt
libs/renderingEngine/include/renderingEngine/: glfw.hpp  outputWindow.hpp  renderingEngine.hpp
libs/renderingEngine/src/: glfw.cpp  glfwImpl.cpp  glfwImpl.hpp  outputWindow.cpp  renderingEngine.cpp  renderingEngineImpl.cpp  renderingEngineImpl.hpp
libs/renderingEngine/src/impl/: CommandBuffers.cpp  CommandBuffers.hpp  CommandPools.cpp  CommandPools.hpp  Context.cpp  Context.hpp  ContextTools.cpp  DefferedRenderPass.cpp  DefferedRenderPass.hpp  DescriptorSetManager.cpp  DescriptorSetManager.hpp  ForwardRenderPass.cpp  ForwardRenderPass.hpp  FrameBufferAttachment.cpp  FrameBufferAttachment.hpp  GlfwImpl.cpp  GlfwImpl.hpp  Gui.cpp  Gui.hpp  IRenderingEngine.hpp  LogicalDevice.cpp  LogicalDevice.hpp  OutputWindow.cpp  OutputWindow.hpp  OutputWindowContext.cpp  OutputWindowContext.hpp  OutputWindowImpl.cpp  OutputWindowImpl.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  PipelineStatistic.cpp  PipelineStatistic.hpp  QueueFamilyIndices.cpp  QueueFamilyIndices.hpp  RenderPass.cpp  RenderPass.hpp  RenderingEngineImpl.cpp  RenderingEngineImpl.hpp  Semaphores.cpp  Semaphores.hpp  (+15 more)
libs/renderingEngine/ut/: CMakeLists.txt
libs/renderingEngine/ut/src/: renderingEngine_tests.cpp
libs/shaders/: CMakeLists.txt
libs/shaders/include/shaders/: ShaderCompiler.hpp  ShaderReflections.hpp  ShaderVariable.hpp  VertexAttribute.hpp
libs/shaders/src/: ShaderCompiler.cpp  ShaderReflections.cpp  ShaderVariable.cpp  ShaderVariableBuilder.hpp  VertexAttribute.cpp
libs/shaders/ut/: CMakeLists.txt
libs/shaders/ut/src/: shaderReflections_tests.cpp
shaders/: imgui.frag  imgui.vert
